style fixes, manage initiatives only if have any, remove new item button on mobile if not logged in

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -158,8 +158,8 @@ input[type=submit] {
 			}
 			.submenu {
 				position: absolute;
-				top: 70px;
-				left: -42px;
+				top: 60px;
+				left: -46px;
 				background: @orange;
 				margin: 0;
 				padding: 0 10px;
@@ -170,15 +170,15 @@ input[type=submit] {
 				li {
 					display: block;
 					margin: 0;
-					padding: 5px 0;
+					padding: 10px 0;
 					border-bottom: 1px solid #fff;
-					line-height: 100%;
+					line-height: 1;
 					&:last-child {
 						border-bottom: 0;
 					}
 					a {
 						margin: 0;
-						padding: 0;
+						padding: 5px 0;
 						font-size: 20px;
 						color: #fff;
 					}
@@ -658,7 +658,7 @@ input[type=submit] {
 		width: 80%;
 		max-width: 800px;
 		background: #fff;
-		.border-radius(10px 10px 0 0);
+		.border-radius(10px);
 		padding: 20px;
 		header {
 			background: @orange;
